# singularity

./: .google-cookie  address_test.py  company.ipynb  info.ipynb  info.md  pyproject.toml  shema.json  temp.py  test_collection.py
singularity/: api.py  insert.ipynb
singularity/utils/: utils.py
