[tool.poetry]
name = "singularity"
version = "0.1.0"
description = ""
authors = ["BesfortBunjaku <bessffort@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "ppypi"
url = "http://localhost:8080/"
default = false
secondary = true


[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.5.0"
pandas = "2.0.1"
website = {version = "^1.0.1", source = "ppypi"}
address = {version = "^1.0.0", source = "ppypi"}
dataextension = {version = "^1.0.9", source = "ppypi"}
tqdm = "^4.66.1"
dask = "^2023.9.2"
phone = {version = "^1.1.0", source = "ppypi"}
pyjanitor = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
